# Spatial-Partioning-Visualizer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CompilerWarnings.cmake  Dependencies.cmake  Sanitizer.cmake  StaticAnalyzer.cmake  Targets.cmake
src/: CMakeLists.txt  main.cpp
